objects/Account_Plan_Contact_Display_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Type__c</fullName>
        <label>Input Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Account Plan Contact Display Fields</label>
</CustomObject>